// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bash multishell changes don't affect parent: Bash 1`] = `
"set -e
eval "$(fjm env)"
fjm use 17.0.2
echo 'set -e
eval "$(fjm env)"
fjm use 21.0.1
if [ "$(java --version)" != '\\''openjdk version "21.0.1"'\\'' ]; then
  echo "Expected java version to be '\\''openjdk version "21.0.1"'\\''. Got $(java --version)"
  exit 1
fi' | bash
if [ "$(java --version)" != 'openjdk version "17.0.2"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.2"'. Got $(java --version)"
  exit 1
fi"
`;

exports[`Fish multishell changes don't affect parent: Fish 1`] = `
"fjm env | source
fjm use 17.0.2
fish -c 'fjm env | source
fjm use 21.0.1
set ____test____ (java --version)
if test "$____test____" != '\\''openjdk version "21.0.1"'\\''
  echo "Expected java version to be '\\''openjdk version "21.0.1"'\\''. Got $____test____"
  exit 1
end'
set ____test____ (java --version)
if test "$____test____" != 'openjdk version "17.0.2"'
  echo "Expected java version to be 'openjdk version "17.0.2"'. Got $____test____"
  exit 1
end"
`;

exports[`PowerShell multishell changes don't affect parent: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fjm env | Out-String | Invoke-Expression
fjm use 17.0.2
echo '$ErrorActionPreference = "Stop"
fjm env | Out-String | Invoke-Expression
fjm use 21.0.1
if ( "$(java --version)" -ne \\'openjdk version "21.0.1"\\' ) { echo "Expected java version to be \\'openjdk version "21.0.1"\\'. Got $(java --version)"; exit 1 }' | pwsh -NoProfile
if ( "$(java --version)" -ne 'openjdk version "17.0.2"' ) { echo "Expected java version to be 'openjdk version "17.0.2"'. Got $(java --version)"; exit 1 }"
`;

exports[`Zsh multishell changes don't affect parent: Zsh 1`] = `
"set -e
eval "$(fjm env)"
fjm use 17.0.2
echo 'set -e
eval "$(fjm env)"
fjm use 21.0.1
if [ "$(java --version)" != '\\''openjdk version "21.0.1"'\\'' ]; then
  echo "Expected java version to be '\\''openjdk version "21.0.1"'\\''. Got $(java --version)"
  exit 1
fi' | zsh
if [ "$(java --version)" != 'openjdk version "17.0.2"' ]; then
  echo "Expected java version to be 'openjdk version "17.0.2"'. Got $(java --version)"
  exit 1
fi"
`;
